--- a/client/views/routes/inputInfo.html
+++ b/client/views/routes/inputInfo.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" ng-app = "myApp">
+<html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
-    <title>Team Manager version 1.1</title>
+
+    <title>Team Manager version 1.1 - Manager Page</title>
     <!-- Styles-->
     <link rel="stylesheet" href="/assets/styles/style.css">
 
@@ -13,10 +13,14 @@
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>
-
-
 </head>
 <body>
-    <main ng-view></main>
+<header>
+    <div ng-include="'/assets/views/templates/nav.html'"></div>
+    <div ng-include="'/assets/views/templates/account.html'"></div>
+    <h1>Team Zeta Setup</h1>
+    <div ng-include="'/assets/views/templates/setupNav.html'"></div>
+</header>
+
 </body>
 </html>
