--- a/client/views/templates/setupNav.html
+++ b/client/views/templates/setupNav.html
@@ -2,6 +2,6 @@
     <ul class="main-nav">
         <li><a href="#inputTeam">Input Team</a></li>
         <li><a href="#manageEmail">Input Schedule</a></li>
-        <li><a href="#playerAttendance">Email Settings</a></li>
+        <li><a href="#emailSettings">Email Settings</a></li>
     </ul>
 </div>
