--- a/client/views/routes/inputTeam.html
+++ b/client/views/routes/inputTeam.html
@@ -15,12 +15,35 @@
     <script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>
 </head>
 <body>
-<header>
-    <div ng-include="'/assets/views/templates/nav.html'"></div>
-    <div ng-include="'/assets/views/templates/account.html'"></div>
-    <h1>Team Zeta Setup</h1>
-    <div ng-include="'/assets/views/templates/setupNav.html'"></div>
-</header>
+    <header>
+        <div ng-include="'/assets/views/templates/nav.html'"></div>
+        <div ng-include="'/assets/views/templates/account.html'"></div>
+        <h1>Team Zeta Setup</h1>
+        <div ng-include="'/assets/views/templates/setupNav.html'"></div>
+    </header>
+    <div ng-controller="inputTeamController">
+        <form id = "teamInput">
+            <h1>Input Team</h1>
+            <label for = "playerName">New Player</label>
+            <input type = "text" ng-model = "newPlayer.name" id = "playerName" placeholder="Enter player name" required>
+            <label for = "playerEmail">Email</label>
+            <input type = "email" ng-model = "newPlayer.email" id = "playerEmail" placeholder="Enter player email" required>
+            <label for = "playerPhone">Phone Number</label>
+            <input type = "tel" ng-model = "newPlayer.phoneNumber" id = "playerPhone" placeholder="Enter player phone(optional)">
+            <input type="radio" name="sex" value="male" checked>Male
+            <input type="radio" name="sex" value="female">Female
+
+            <input type = "submit" value = "submit" ng-click = "submitPlayer(newPlayer)">
+            <input type = "submit" value = "Roster Complete" ng-click = "">
+        </form>
+        <div class = "roster-display">
+            <h1>Roster</h1>
+            <div class = "roster" ng-repeat="player in playerArray">
+                <!-- insert a table here-->
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
