--- a/server/public/assets/views/templates/nav.html
+++ b/server/public/assets/views/templates/nav.html
@@ -1,7 +1,6 @@
 <div>
     <ul class="main-nav">
-        <li><a href="#inputInfo">Input Info</a></li>
-        <li><a href="#manageEmail">Manage Email</a></li>
+        <li><a href="#inputTeam">Input Info</a></li>
         <li><a href="#playerAttendance">Player Attendance</a></li>
     </ul>
 </div>
