--- a/client/views/routes/login.html
+++ b/client/views/routes/login.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="en" ng-app = "myApp">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" ng-app = "myApp">-->
 <head>
-    <meta charset="UTF-8">
-    <title>Team Manager version 1.1</title>
-    <!-- Styles-->
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Team Manager version 1.1</title>-->
+    <!--&lt;!&ndash; Styles&ndash;&gt;-->
+    <!--<link rel="stylesheet" href="/assets/styles/style.css">-->
 
-    <!-- Scripts-->
+    <!--&lt;!&ndash; Scripts&ndash;&gt;-->
 
-    <!--<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>-->
-    <script type="text/javascript" src="/vendors/angular.min.js"></script>
-    <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
-    <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
-    <script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>
+    <!--&lt;!&ndash;<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>&ndash;&gt;-->
+    <!--<script type="text/javascript" src="/vendors/angular.min.js"></script>-->
+    <!--<script type="text/javascript" src="/vendors/angular-route.min.js"></script>-->
+    <!--<script type="text/javascript" src="/assets/scripts/app.min.js"></script>-->
+    <!--<script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>-->
     <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
     </script>
     <script>
@@ -29,12 +29,14 @@
 
 </head>
 <body>
-<div id = "login" ng-controller="loginController">
-    <form>
-        <input type = "button" value ="Sign in with Google" ng-click="googleLogin()">
-    </form>
-</div>
-
-
+    <div id = "login">
+        <form>
+            <input type = "button" value ="Sign in with Google" ng-click="googleLogin()">
+        </form>
+    </div>
 </body>
-</html>
+
+
+
+
+<!--</html>-->
