--- a/client/views/routes/playerAttendance.html
+++ b/client/views/routes/playerAttendance.html
@@ -1,26 +1,26 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="myApp">
-<head>
-    <meta charset="UTF-8">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" ng-app="myApp">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
 
-    <title>Team Manager version 1.1 - Manager Page</title>
-    <!-- Styles-->
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <!--<title>Team Manager version 1.1 - Manager Page</title>-->
+    <!--&lt;!&ndash; Styles&ndash;&gt;-->
+    <!--<link rel="stylesheet" href="/assets/styles/style.css">-->
 
-    <!-- Scripts-->
+    <!--&lt;!&ndash; Scripts&ndash;&gt;-->
 
-    <!--<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>-->
-    <script type="text/javascript" src="/vendors/angular.min.js"></script>
-    <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
-    <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
-    <script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>
-</head>
-<body>
+    <!--&lt;!&ndash;<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>&ndash;&gt;-->
+    <!--<script type="text/javascript" src="/vendors/angular.min.js"></script>-->
+    <!--<script type="text/javascript" src="/vendors/angular-route.min.js"></script>-->
+    <!--<script type="text/javascript" src="/assets/scripts/app.min.js"></script>-->
+    <!--<script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>-->
+<!--</head>-->
+
     <header>
         <div ng-include="'/assets/views/templates/nav.html'"></div>
         <div ng-include="'/assets/views/templates/account.html'"></div>
         <h1>Team Zeta Attendance</h1>
     </header>
 
-</body>
-</html>
+
+<!--</html>-->
