--- a/client/views/index.html
+++ b/client/views/index.html
@@ -11,6 +11,8 @@
     <!--<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>-->
     <script type="text/javascript" src="/vendors/angular.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
+    <script type="text/javascript" src="/vendors/ui-grid.min.css"></script>
+    <script type="text/javascript" src="/vendors/ui-grid.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>
 
