--- a/client/views/index.html
+++ b/client/views/index.html
@@ -5,13 +5,12 @@
     <title>Team Manager version 1.1</title>
     <!-- Styles-->
     <link rel="stylesheet" href="/assets/styles/style.css">
-
+    <link rel="stylesheet" href="/vendors/ui-grid.min.css">
     <!-- Scripts-->
 
     <!--<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>-->
     <script type="text/javascript" src="/vendors/angular.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
-    <script type="text/javascript" src="/vendors/ui-grid.min.css"></script>
     <script type="text/javascript" src="/vendors/ui-grid.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>
