--- a/server/public/assets/views/routes/inputTeam.html
+++ b/server/public/assets/views/routes/inputTeam.html
@@ -30,18 +30,23 @@
             <input type = "email" ng-model = "newPlayer.email" id = "playerEmail" placeholder="Enter player email" required>
             <label for = "playerPhone">Phone Number</label>
             <input type = "tel" ng-model = "newPlayer.phoneNumber" id = "playerPhone" placeholder="Enter player phone(optional)">
-            <input type="radio" name="sex" value="male" checked>Male
-            <input type="radio" name="sex" value="female">Female
+            <input type="radio" name="sex" value="player" ng-model = "newPlayer.type" checked>Player
+            <input type="radio" name="sex" value="sub" ng-model = "newPlayer.type">Sub
 
-            <input type = "submit" value = "submit" ng-click = "submitPlayer(newPlayer)">
+            <input type = "submit" value = "submit" ng-click = "inputPlayer(newPlayer)">
             <input type = "submit" value = "Roster Complete" ng-click = "">
         </form>
+        <div>
+            <p>{{newPlayer.name}}</p>
+            <p>{{newPlayer.email}}</p>
+        </div>
         <div class = "roster-display">
             <h1>Roster</h1>
-            <div class = "roster-grid" ui-grid = "{ data: playerArray}" >
+            <div class = "grid" ui-grid = "{ data: playerArray}" >
                 <!-- insert a table here-->
             </div>
         </div>
+
     </div>
 
 
