--- a/client/views/routes/inputTeam.html
+++ b/client/views/routes/inputTeam.html
@@ -39,7 +39,7 @@
 
         <div class = "roster-display">
             <h1>Roster</h1>
-            <div class = "grid" ui-grid = "{gridOptions}" >
+            <div class = "grid" ui-grid = "gridOptions" >
                 <!-- insert a table here-->
             </div>
         </div>
