--- a/server/public/assets/views/routes/inputTeam.html
+++ b/server/public/assets/views/routes/inputTeam.html
@@ -39,9 +39,12 @@
 
         <div class = "roster-display">
             <h1>Roster</h1>
-            <div class = "grid" ui-grid = "gridOptions" >
+            <div class = table>
+                <div class = "grid" ui-grid = "gridOptions" ui-grid-edit ui-grid-row-edit>
                 <!-- insert a table here-->
+                </div>
             </div>
+
         </div>
 
     </div>
