--- a/client/views/templates/setupNav.html
+++ b/client/views/templates/setupNav.html
@@ -1,7 +1,7 @@
 <div>
-    <ul class="main-nav">
+    <ul class="setup-nav">
         <li><a href="#inputTeam">Input Team</a></li>
-        <li><a href="#manageEmail">Input Schedule</a></li>
-        <li><a href="#emailSettings">Email Settings</a></li>
+        <li><a href="#inputSchedule">Input Schedule</a></li>
+        <li><a href="#inputEmailSettings">Email Settings</a></li>
     </ul>
 </div>
