--- a/client/views/index.html
+++ b/client/views/index.html
@@ -15,6 +15,21 @@
     <script type="text/javascript" src="/vendors/ui-grid.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>
+    <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
+    </script>
+    <script>
+        function start() {
+            gapi.load('auth2', function() {
+                auth2 = gapi.auth2.init({
+                    client_id: '1014545251900-anab20hkgicb30gpsgu7q7vb47pnr326.apps.googleusercontent.com',
+                    // Scopes to request in addition to 'profile' and 'email'
+                    scope: 'https://www.googleapis.com/auth/calendar'
+//                    callbackUrl: "http://www.localhost5000/playerAttendance"
+
+                });
+            });
+        }
+    </script>
 
 
 </head>
