--- a/server/public/assets/views/routes/inputTeam.html
+++ b/server/public/assets/views/routes/inputTeam.html
@@ -1,19 +1,3 @@
-<!--<html lang="en" ng-app="myApp">-->
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-
-    <!--<title>Team Manager version 1.1 - Manager Page</title>-->
-    <!--&lt;!&ndash; Styles&ndash;&gt;-->
-    <!--<link rel="stylesheet" href="/assets/styles/style.css">-->
-
-    <!--&lt;!&ndash; Scripts&ndash;&gt;-->
-
-    <!--&lt;!&ndash;<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>&ndash;&gt;-->
-    <!--<script type="text/javascript" src="/vendors/angular.min.js"></script>-->
-    <!--<script type="text/javascript" src="/vendors/angular-route.min.js"></script>-->
-    <!--<script type="text/javascript" src="/assets/scripts/app.min.js"></script>-->
-    <!--<script type="text/javascript" src="/assets/scripts/controllers/controller.min.js"></script>-->
-<!--</head>-->
 
     <header>
         <div ng-include="'/assets/views/templates/nav.html'"></div>
@@ -33,18 +17,19 @@
             <input type="radio" name="sex" value="player" ng-model = "newPlayer.type" checked>Player
             <input type="radio" name="sex" value="sub" ng-model = "newPlayer.type">Sub
 
-            <input type = "submit" value = "submit" ng-click = "inputPlayer(newPlayer)">
-            <input type = "submit" value = "Roster Complete" ng-click = "">
+            <div class = "submit-buttons">
+                <input type = "submit" value = "submit" ng-click = "inputPlayer(newPlayer)">
+                <input type = "submit" value = "Roster Complete" ng-click = "">
+            </div>
         </form>
 
         <div class = "roster-display">
             <h1>Roster</h1>
-            <div class = table>
+            <div class = "table roster">
                 <div class = "grid" ui-grid = "gridOptions" ui-grid-edit ui-grid-row-edit>
                 <!-- insert a table here-->
                 </div>
             </div>
-
         </div>
 
     </div>
