--- a/client/views/routes/inputEmailSettings.html
+++ b/client/views/routes/inputEmailSettings.html
@@ -33,7 +33,9 @@
     </div>
     <div class = "submit-buttons">
         <input type = "submit" value = "submit" ng-click = "inputEmailSettings(reminders)">
+        <input type = "submit" value = "Set Offline Access" ng-click="setOfflineAccess()">
         <input type = "submit" value = "Settings Complete" ng-click = "">
+
     </div>
 
 </div>
