roster and schedule pages functionality complete

--- a/client/views/routes/inputEmailSettings.html
+++ b/client/views/routes/inputEmailSettings.html
@@ -34,7 +34,8 @@
     <div class = "submit-buttons">
         <input type = "submit" value = "submit" ng-click = "inputEmailSettings(reminders)">
         <input type = "submit" value = "Set Offline Access" ng-click="setOfflineAccess()">
-        <input type = "submit" value = "Settings Complete" ng-click = "">
+        <input type = "submit" value = "Settings Complete" ng-click = "emailSettingsComplete()">
+        <input type = "submit" value = "START SEASON" ng-click = "startSeason()">
 
     </div>
 
