--- a/client/views/routes/inputTeam.html
+++ b/client/views/routes/inputTeam.html
@@ -19,7 +19,7 @@
 
             <div class = "submit-buttons">
                 <input type = "submit" value = "submit" ng-click = "inputPlayer(newPlayer)">
-                <input type = "submit" value = "Roster Complete" ng-click = "offlineAccess()">
+                <input type = "submit" value = "Roster Complete" ng-click = "rosterComplete()">
             </div>
         </form>
 
