--- a/server/public/assets/views/routes/inputSchedule.html
+++ b/server/public/assets/views/routes/inputSchedule.html
@@ -6,22 +6,31 @@
 </header>
 <div>
     <form id = "scheduleInput">
-        <h1>Input Schedule</h1>
-        <label for = "newGame">New Game</label>
-        <input type = "datetime-local" ng-model = "newGame.date" id = "newGame" required>
-
-
-        <label for = "gameLocation">Location</label>
-        <input type = "text" ng-model = "newGame.location" id = "gameLocation" placeholder="Enter location here" required>
-        <div class = "submit-buttons">
-            <input type = "submit" value = "submit" ng-click = "inputGame(newGame)">
-            <input type = "submit" value = "Schedule Complete" ng-click = "">
+        <div class = "create-calendar"> <h1>Create New Calendar</h1>
+            <label for = "calendarName">Calendar Name</label>
+            <input type = "text" id = "calendarName" ng-model="newCalendar.summary" placeholder="Enter Calendar Name Here">
+            <input type = "submit" value = "Create New Calendar" ng-click = createCalendar()>
         </div>
+        <div class = "create-schedule">
+            <h1>Input Schedule</h1>
+            <label for = "newGame">New Game</label>
+            <input type = "datetime-local" ng-model = "newGame.date" id = "newGame">
+            <label for = "gameLocation">Location</label>
+            <input type = "text" ng-model = "newGame.location" id = "gameLocation" placeholder="Enter location here">
+            <input type = "submit" value = "submit" ng-click = "inputGame(newGame)">
+            <input type = "submit" value = "Schedule Complete" ng-click = "scheduleComplete()">
+        </div>
+
+
+
     </form>
 
     <div class = "schedule-display">
         <h1>Schedule</h1>
-        <div class = table>
+        <label>Calendar Name</label>
+        <select ng-model = "selectedCalendar.calendar" ng-options="calendar.summary for calendar in currentCalendars" ng-change="getEvents(selectedCalendar.calendar)"></select>
+        <!--<input type = "submit" value = "Get events" ng-click = "getEvents(selectedCalendar.calendar)">-->
+        <div class = "table">
             <div class = "grid" ui-grid = "gridOptions" ui-grid-edit ui-grid-row-edit>
                 <!-- insert a table here-->
             </div>
