--- a/server/public/assets/views/routes/playerAttendance.html
+++ b/server/public/assets/views/routes/playerAttendance.html
@@ -7,7 +7,7 @@
 <div class = "attendance-schedule">
     <div class = "attendance">
         <h1>Attendance</h1>
-        <h2>{{selected.date}} {{selected.start}}</h2>
+        <h2>{{selected.display_date}} {{selected.display_start}}</h2>
         <input type = "submit" value = "Invite Subs" ng-click = "inviteSubs()">
         <div class = "grid" ui-grid = "gridOptions1" ui-grid-edit ui-grid-row-edit>
             <!-- insert a table here-->
