--- a/client/views/templates/account.html
+++ b/client/views/templates/account.html
@@ -1,6 +1,6 @@
 
 <!--Not sure about how this page will exactly look yet in terms of code-->
-<div>
+<div layout = "row" flex="25" flex-offset="75">
     <p>Zeta Manager</p>
     <li><a href="#index">Logout</a></li>
 </div>
