--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -30,8 +30,17 @@ span.buttonText {
     /* Use the Roboto font that is loaded in the <head> */
     font-family: 'Roboto', sans-serif;
 }
+.main-nav .setup-nav {
+    min-width: 100px;
+    text-align: center;
+    max-width: 300px;
+}
 .grid {
     width:800px;
     height: auto;
     text-align: center;
+}
+#teamInput{
+    max-width: 500px;
+    min-width: 100px;
 }
