--- a/client/views/templates/nav.html
+++ b/client/views/templates/nav.html
@@ -1,6 +1,12 @@
 <div>
-    <ul class="main-nav">
+    <md-toolbar class="main-nav" layout = "row" flex-offset="33" flex="33">
         <li><a href="#inputTeam">Input Info</a></li>
         <li><a href="#playerAttendance">Player Attendance</a></li>
-    </ul>
+    </md-toolbar>
 </div>
+<!--<div>-->
+    <!--<ul class="main-nav" layout = "row" flex-offset="33" flex>-->
+        <!--<li><a href="#inputTeam">Input Info</a></li>-->
+        <!--<li><a href="#playerAttendance">Player Attendance</a></li>-->
+    <!--</ul>-->
+<!--</div>-->
