--- a/client/views/templates/setupNav.html
+++ b/client/views/templates/setupNav.html
@@ -1,7 +1,14 @@
 <div>
-    <ul class="setup-nav">
+    <md-toolbar class="setup-nav" layout="row" flex-offset="25">
         <li><a href="#inputTeam">Input Team</a></li>
         <li><a href="#inputSchedule">Input Schedule</a></li>
         <li><a href="#inputEmailSettings">Email Settings</a></li>
-    </ul>
+    </md-toolbar>
 </div>
+<!--<div>-->
+    <!--<ul class="setup-nav">-->
+        <!--<li><a href="#inputTeam">Input Team</a></li>-->
+        <!--<li><a href="#inputSchedule">Input Schedule</a></li>-->
+        <!--<li><a href="#inputEmailSettings">Email Settings</a></li>-->
+    <!--</ul>-->
+<!--</div>-->
