--- a/server/public/assets/views/index.html
+++ b/server/public/assets/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Team Manager version 1.1</title>
     <!-- Styles-->
+    <link rel = "stylesheet" href = "vendors/angular-material.min.css">
     <link rel="stylesheet" href="/vendors/ui-grid.min.css">
     <link rel="stylesheet" href="/assets/styles/style.css">
 
@@ -14,7 +15,9 @@
     <script type="text/javascript" src="/vendors/angular.min.js"></script>
     <script type = "text/javascript" src="/vendors/angular-moment.js"></script>
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
-
+    <script type="text/javascript" src="/vendors/angular-animate.min.js"></script>
+    <script type="text/javascript" src="/vendors/angular-aria.min.js"></script>
+    <script type="text/javascript" src="/vendors/angular-material.min.js"></script>
 
     <script type="text/javascript" src="/vendors/ui-grid.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-google-gapi.min.js"></script>
