--- a/server/public/assets/views/routes/inputEmailSettings.html
+++ b/server/public/assets/views/routes/inputEmailSettings.html
@@ -33,7 +33,7 @@
     </div>
     <div class = "submit-buttons">
         <input type = "submit" value = "Submit Settings" ng-click = "inputEmailSettings(reminders)">
-        <!--<input type = "submit" value = "Set Offline Access" ng-click="setOfflineAccess()">-->
+        <input type = "submit" value = "Set Offline Access" ng-click="setOfflineAccess()">
         <!--<input type = "submit" value = "Settings Complete" ng-click = "emailSettingsComplete()">-->
         <input type = "submit" value = "START SEASON" ng-click = "startSeason()">
 
