--- a/server/public/assets/views/routes/inputTeam.html
+++ b/server/public/assets/views/routes/inputTeam.html
@@ -8,15 +8,22 @@
     <div>
         <form id = "teamInput">
             <h1>Input Team</h1>
-            <label for = "playerName">New Player</label>
-            <input type = "text" ng-model = "newPlayer.name" id = "playerName" placeholder="Enter player name">
-            <label for = "playerEmail">Email</label>
-            <input type = "email" ng-model = "newPlayer.email" id = "playerEmail" placeholder="Enter player email">
-            <label for = "playerPhone">Phone Number</label>
-            <input type = "tel" ng-model = "newPlayer.phoneNumber" id = "playerPhone" placeholder="Enter player phone(optional)">
-            <input type="radio" name="sex" value="player" ng-model = "newPlayer.type" checked>Player
-            <input type="radio" name="sex" value="sub" ng-model = "newPlayer.type">Sub
-
+            <md-input-container>
+                <label>Player Name</label>
+                <input type = "text" ng-model = "newPlayer.name" id = "playerName">
+            </md-input-container>
+            <md-input-container>
+                <label>Email</label>
+                <input type = "email" ng-model = "newPlayer.email">
+            </md-input-container>
+            <md-input-container>
+                <label>Phone Number</label>
+                <input type = "tel" ng-model = "newPlayer.phoneNumber">
+            </md-input-container>
+            <md-radio-group>
+                <md-radio-button  value="player" ng-model = "newPlayer.type">Player</md-radio-button>
+                <md-radio-button value="sub" ng-model = "newPlayer.type">Sub</md-radio-button>
+            </md-radio-group>
             <div class = "submit-buttons">
                 <input type = "submit" value = "submit" ng-click = "inputPlayer(newPlayer)">
                 <input type = "submit" value = "Roster Complete" ng-click = "rosterComplete()">
