--- a/server/public/assets/views/templates/nav.html
+++ b/server/public/assets/views/templates/nav.html
@@ -1,5 +1,5 @@
 <div>
-    <md-toolbar class="main-nav" layout = "row" flex-offset="33" flex="33">
+    <md-toolbar class="main-nav" layout = "row" flex-offset="33">
         <li><a href="#inputTeam">Input Info</a></li>
         <li><a href="#playerAttendance">Player Attendance</a></li>
     </md-toolbar>
