--- a/client/views/templates/account.html
+++ b/client/views/templates/account.html
@@ -1,13 +1,13 @@
 
 <!--Not sure about how this page will exactly look yet in terms of code-->
-<div layout = "row" flex="25" flex-offset="75">
+<div layout = "row" flex="25">
     <p>Zeta Manager</p>
     <li><a href="#index">Logout</a></li>
 </div>
 
-<div>
-    <!-- need a controller in here which has a dropdown menu-->
-    <!-- for now I'll put a p tag, so we can see it-->
-    <select ng-model = "selectedEmail.email" ng-options="email.name for email in emailTeam"
-            ng-change="emailSelected(selectedEmail.email)"></select>
-</div>
+<!--<div>-->
+    <!--&lt;!&ndash; need a controller in here which has a dropdown menu&ndash;&gt;-->
+    <!--&lt;!&ndash; for now I'll put a p tag, so we can see it&ndash;&gt;-->
+    <!--<select ng-model = "selectedEmail.email" ng-options="email.name for email in emailTeam"-->
+            <!--ng-change="emailSelected(selectedEmail.email)"></select>-->
+<!--</div>-->
