--- a/client/views/templates/setupNav.html
+++ b/client/views/templates/setupNav.html
@@ -1,14 +1,14 @@
-<div>
-    <md-toolbar class="setup-nav" layout="row" flex-offset="33">
-        <li><a href="#inputTeam">Input Team</a></li>
-        <li><a href="#inputSchedule">Input Schedule</a></li>
-        <li><a href="#inputEmailSettings">Email Settings</a></li>
-    </md-toolbar>
-</div>
 <!--<div>-->
-    <!--<ul class="setup-nav">-->
+    <!--<md-toolbar class="setup-nav" layout="row" flex-offset="33">-->
         <!--<li><a href="#inputTeam">Input Team</a></li>-->
         <!--<li><a href="#inputSchedule">Input Schedule</a></li>-->
         <!--<li><a href="#inputEmailSettings">Email Settings</a></li>-->
-    <!--</ul>-->
+    <!--</md-toolbar>-->
 <!--</div>-->
+<div>
+    <ul layout = "row" class="setup-nav" flex-offset="33">
+        <li><a href="#inputTeam">Input Team</a></li>
+        <li><a href="#inputSchedule">Input Schedule</a></li>
+        <li><a href="#inputEmailSettings">Email Settings</a></li>
+    </ul>
+</div>
