--- a/client/views/templates/account.html
+++ b/client/views/templates/account.html
@@ -1,8 +1,8 @@
 
 <!--Not sure about how this page will exactly look yet in terms of code-->
-<div layout = "row" flex="25">
+<div class = "account" layout = "row" flex="15">
     <p>Zeta Manager</p>
-    <li><a href="#index">Logout</a></li>
+    <li class = "logout"><a href="#index">Logout</a></li>
 </div>
 
 <!--<div>-->
