--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -32,18 +32,27 @@ span.buttonText {
 }
 li {
     list-style-type: none;
-    margin:10px
+    margin-left:10px
+}
+h1 {
+    text-align: center;
 }
 .main-nav{
     text-align: center;
-    max-width: 300px;
     padding:5px;
-
+    float: left;
+    min-width: 400px;
 }
+
+.logout {
+    margin: auto;
+    margin-left: 10px;
+}
+
 .setup-nav {
     min-width: 100px;
     text-align: center;
-    max-width: 300px;
+    max-width: 500px;
 }
 .grid {
     width:800px;
