--- a/server/public/assets/views/routes/inputTeam.html
+++ b/server/public/assets/views/routes/inputTeam.html
@@ -6,7 +6,7 @@
         <div ng-include="'/assets/views/templates/setupNav.html'"></div>
     </header>
     <div>
-        <form id = "teamInput">
+        <form id = "teamInput" flex-offset="25" flex>
             <h1>Input Team</h1>
             <md-input-container>
                 <label>Player Name</label>
