--- a/server/public/assets/views/templates/nav.html
+++ b/server/public/assets/views/templates/nav.html
@@ -1,12 +1,12 @@
-<div>
-    <md-toolbar class="main-nav" layout = "row" flex-offset="33">
-        <li><a href="#inputTeam">Input Info</a></li>
-        <li><a href="#playerAttendance">Player Attendance</a></li>
-    </md-toolbar>
-</div>
 <!--<div>-->
-    <!--<ul class="main-nav" layout = "row" flex-offset="33" flex>-->
+    <!--<md-toolbar class="main-nav" layout = "row" flex-offset="33">-->
         <!--<li><a href="#inputTeam">Input Info</a></li>-->
         <!--<li><a href="#playerAttendance">Player Attendance</a></li>-->
-    <!--</ul>-->
+    <!--</md-toolbar>-->
 <!--</div>-->
+<div>
+    <ul class="main-nav" flex-offset="40" layout = "row">
+        <li><a href="#inputTeam">Input Info</a></li>
+        <li><a href="#playerAttendance">Player Attendance</a></li>
+    </ul>
+</div>
