--- a/client/views/templates/nav.html
+++ b/client/views/templates/nav.html
@@ -4,9 +4,11 @@
         <!--<li><a href="#playerAttendance">Player Attendance</a></li>-->
     <!--</md-toolbar>-->
 <!--</div>-->
-<div>
-    <ul class="main-nav" flex-offset="40" layout = "row">
-        <li><a href="#inputTeam">Input Info</a></li>
-        <li><a href="#playerAttendance">Player Attendance</a></li>
-    </ul>
+<div class = "main-nav" layout-align="center" flex-offset="25">
+    <md-toolbar class = "md-menu-toolbar">
+        <ul layout-align="center" layout = "row">
+            <li><a href="#inputTeam">Input Info</a></li>
+            <li><a href="#playerAttendance">Player Attendance</a></li>
+        </ul>
+    </md-toolbar>
 </div>
