--- a/server/public/assets/views/routes/inputTeam.html
+++ b/server/public/assets/views/routes/inputTeam.html
@@ -2,12 +2,13 @@
     <header>
         <div ng-include="'/assets/views/templates/nav.html'"></div>
         <div ng-include="'/assets/views/templates/account.html'"></div>
-        <h1>Team Zeta Setup</h1>
+        <div class ="centered flex-offset-25" layout-align="center"><h1>Team Setup</h1></div>
+
         <div ng-include="'/assets/views/templates/setupNav.html'"></div>
     </header>
     <div>
-        <form id = "teamInput" flex-offset="25" flex>
-            <h1>Input Team</h1>
+        <div class = "centered flex-offset-25" layout-align="center"><h1>Input Team</h1></div>
+        <form id = "teamInput" flex-offset="25" layout-align="center">
             <md-input-container>
                 <label>Player Name</label>
                 <input type = "text" ng-model = "newPlayer.name" id = "playerName">
@@ -20,18 +21,20 @@
                 <label>Phone Number</label>
                 <input type = "tel" ng-model = "newPlayer.phoneNumber">
             </md-input-container>
-            <md-radio-group>
+            <md-radio-group layout="row">
                 <md-radio-button  value="player" ng-model = "newPlayer.type">Player</md-radio-button>
                 <md-radio-button value="sub" ng-model = "newPlayer.type">Sub</md-radio-button>
             </md-radio-group>
-            <div class = "submit-buttons">
-                <input type = "submit" value = "submit" ng-click = "inputPlayer(newPlayer)">
-                <input type = "submit" value = "Roster Complete" ng-click = "rosterComplete()">
+            <div class = "submit-buttons" layout-align="right">
+                <md-button class="md-raised md-primary" ng-click = "inputPlayer(newPlayer)">Submit Player</md-button>
+                <!--<input type = "submit" value = "Submit Player" ng-click = "inputPlayer(newPlayer)">-->
+                <md-button class="md-raised" ng-click = "rosterComplete()">Roster Complete</md-button>
+                <!--<input type = "submit" value = "Roster Complete" ng-click = "rosterComplete()">-->
             </div>
         </form>
+        <div class = "centered flex-offset-25"><h1>Roster</h1></div>
+        <div class = "roster-display centered layout-align-center">
 
-        <div class = "roster-display">
-            <h1>Roster</h1>
             <div class = "table roster">
                 <div class = "grid" ui-grid = "gridOptions" ui-grid-edit ui-grid-row-edit>
                 <!-- insert a table here-->
