--- a/server/public/assets/views/templates/setupNav.html
+++ b/server/public/assets/views/templates/setupNav.html
@@ -4,11 +4,14 @@
         <!--<li><a href="#inputSchedule">Input Schedule</a></li>-->
         <!--<li><a href="#inputEmailSettings">Email Settings</a></li>-->
     <!--</md-toolbar>-->
-<!--</div>-->
-<div>
-    <ul layout = "row" class="setup-nav" flex-offset="33">
-        <li><a href="#inputTeam">Input Team</a></li>
-        <li><a href="#inputSchedule">Input Schedule</a></li>
-        <li><a href="#inputEmailSettings">Email Settings</a></li>
-    </ul>
+<!--</div>-->.
+<div class = "setup-nav" flex-offset="25">
+    <md-toolbar class="md-menu-toolbar">
+        <ul layout = "row" layout-align="center">
+            <li><a href="#inputTeam">Input Team</a></li>
+            <li><a href="#inputSchedule">Input Schedule</a></li>
+            <li><a href="#inputEmailSettings">Email Settings</a></li>
+        </ul>
+    </md-toolbar>
 </div>
+
