--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -48,6 +48,10 @@ h1 {
     text-align: center;
     width:50%;
 }
+.centered-schedule {
+    width:800px;
+    text-align: center;
+}
 .logout {
     margin: auto;
     margin-left: 10px;
@@ -72,17 +76,36 @@ h1 {
     height: auto;
     text-align: center;
 }
-
-.new-calendar-input {
-    width: 35%;
+.new-calendar {
+    width:360px;
+    margin-right:20px;
+    border: 1px solid;
+    box-sizing: border-box;
 }
 
-.game-datetime{
+.create-schedule {
+    width:360px;
+    margin-left: 20px;
+    border: 1px solid;
+    box-sizing: border-box;
+
+}
+.new-game-input {
+    margin-top: 3px;
+}
+.new-calendar-input {
+    width: 50%;
+    margin-bottom: 80px;
+}
+
+.game-datetime {
     margin:10px;
     margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .location {
+    height: 40px;
     width: 50%;
 }
 /*.md-datepicker-calendar, .md-datepicker-input-mask-opaque {*/
